--- a/Amazon-Clone/style.css
+++ b/Amazon-Clone/style.css
@@ -87,8 +87,8 @@ body {
   padding: 0.7rem 0;
   /* width: 20px; */
 }
-.nav-right {
+/* .nav-right {
   width: 25%;
   height: 4rem;
   background-color: brown;
-}
+} */
